--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.4.0",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2"
